src/views/ChangeNetwork/changenetwork.scss
#change-network-view {
  position: absolute !important;
  width: 100%;
  height: 100%;
  z-index: 69;

  @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
    .MuiBackdrop-root {
      background: rgba(100, 100, 100, 0.1) !important;
      backdrop-filter: blur(33px) !important;
      -webkit-backdrop-filter: blur(33px) !important;
      .ohm-card {
        opacity: 1 !important;
        height: auto;
      }
    }
    .ohm-modal {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      padding: 0px 0px 50px;
      position: relative;
      max-width: 688px;
      min-height: 290px;
      border-radius: 10px;
    }
  }

  /* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
  @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
    .MuiBackdrop-root {
      background: rgba(100, 100, 100, 0.95);
      .ohm-card {
        height: auto;
      }
    }
    .ohm-modal {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      padding: 0px 0px 50px;
      position: relative;
      max-width: 688px;
      min-height: 290px;
      border-radius: 10px;
    }
  }
  .grid-container {
    .grid-header {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: flex-start;
      padding: 30px;
      position: static;
      height: 78px;
      left: calc(50% - 688px / 2);

      .grid-header-content {
        flex: none;
        order: 0;
        align-self: stretch;
        flex-grow: 0;
      }
    }
    .grid-message {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      grid-gap: 15px;
      padding: 20px 40px 30px;
      position: static;
      width: 688px;
      height: 102px;

      .grid-message-typography {
        display: flex;
        flex-direction: row;
        flex-grow: 1;
        justify-content: center;
        align-self: stretch;
        align-items: center;
        position: static;
        font-style: normal;
        font-weight: normal;
        font-size: 20px;
        .chain-highlight {
          font-size: 20px;
        }
      }

    }
    .grid-buttons {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      grid-gap: 15px;
      padding: 20px 40px 30px;
      position: static;
      width: 688px;
      height: 102px;
      left: 0px;
      top: 138px;

      .grid-button {
        flex: none;
        order: 3;
        align-self: stretch;
        flex-grow: 1;
        margin: 0px 0px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        position: static;
        width: 296.5px;
        max-height: 58px;
        height: 58px;
        left: 351.5px;
        top: calc(50% - 58px/2 - 2px);
        border: 1px solid;
        box-sizing: border-box;
        border-radius: 5px;

        button {
          max-width: 296.5px;
          width: 296.5px;
          max-height: 58px;
          box-sizing: border-box;
        }

        .grid-button-content {
          flex: none;
          order: 0;
          flex-grow: 0;
          margin: 0 15px;

          .grid-button-icon {
            margin-top: 12px;
            position: static;
            width: 32px;
            height: 32px;
            left: 93.75px;
            top: 13px;
            border-radius: 50%;
          }

          .grid-button-text {
            position: static;
            width: 69px;
            height: 16px;
            left: 133.75px;
            top: 21px;
            font-family: Euclid Square;
            font-style: normal;
            font-weight: 500;
            font-size: 16px;
            line-height: 16px;
            display: flex;
            align-items: center;
          }
        }
      }
    }
  }
}

.mobile #change-network-view {
  .ohm-card {
    .card-content {
      justify-content: space-evenly !important;
    }
  }
  .ohm-modal {
    min-height: 400px;
  }
  .grid-buttons {
    flex-direction: column;
  }
}

